--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
     }
     5% {
         opacity: 0;
-        scale: 0.975;
+        scale: 0.95;
     }
     100% {
         opacity: 1;
@@ -28,17 +28,70 @@
         scale: 2;
     }
 }
-a {
+.inlineLink {
     color: white;
     text-decoration: none;
     font-style: italic;
-}:hover {
+}
+.inlineLink:hover {
     color: rgb(59, 150, 255);
 }
-strong{
-    font-style: italic;
-    text-align: center;
-}:hover {
-    animation: onHover 1s;
-    animation-direction: alternate;
-}
+
+
+
+/* Thank GOD for w3schools */
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: rgb(30, 30, 30); /* Background */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    white-space: nowrap;
+  }
+
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  .sidenav .closebtn:hover {
+    color: rgb(255, 75, 75);
+  }
+
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
