--- a/main.css
+++ b/main.css
@@ -37,9 +37,10 @@
     color: rgb(59, 150, 255);
 }
 
-
+/* Above code is for "Sorry" page */
 
 /* Thank GOD for w3schools */
+
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
@@ -59,7 +60,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-family: 'Lato', sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -94,4 +95,79 @@
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+
+#logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: "Playfair Display", sans-serif;
+    font-size: 30px;
+}
+
+#bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+} /* TODO this :( */
+
+
+
+/* PARALLAX EFFECT */
+#parallax-effect .parallax-one {
+    padding-top: 400px;
+    padding-bottom: 400px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1415018255745-0ec3f7aee47b?dpr=1&auto=format&fit=crop&w=1500&h=938&q=80&cs=tinysrgb&crop=);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+#parallax-effect .parallax-two {
+    padding-top: 400px;
+    padding-bottom: 400px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1432163230927-a32e4fd5a326?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#parallax-effect .parallax-three {
+    padding-top: 400px;
+    padding-bottom: 400px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=);
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/* Media Queries */
+/**************************/
+@media screen and (max-width: 959px) and (min-width: 768px) {
+  #parallax-effect .block {padding: 40px; width:620px;}
+}
+@media screen and (max-width: 767px) {
+  #parallax-effect .block {padding: 30px; width:420px;}
+  #parallax-effect h2 {font-size:30px;}
+  #parallax-effect .block {padding: 30px;}
+  #parallax-effect .parallax-one, #parallax-effect .parallax-two, #parallax-effect .parallax-three {padding-top:100px; padding-bottom:100px;}
+}
+@media screen and (max-width: 479px) {
+  #parallax-effect .block {padding: 30px 15px; width:290px;}
 }
