--- a/main.css
+++ b/main.css
@@ -114,47 +114,23 @@
 
 
 /* PARALLAX EFFECT */
-#parallax-effect .parallax-one {
+#parallax-effect .parallax-container {
     padding-top: 400px;
     padding-bottom: 400px;
     overflow: hidden;
     position: relative;
     width: 100%;
-    background-image: url(https://images.unsplash.com/photo-1415018255745-0ec3f7aee47b?dpr=1&auto=format&fit=crop&w=1500&h=938&q=80&cs=tinysrgb&crop=);
+    /* background-image: url(https://images.unsplash.com/photo-1415018255745-0ec3f7aee47b?dpr=1&auto=format&fit=crop&w=1500&h=938&q=80&cs=tinysrgb&crop=); */
     background-attachment: fixed;
     background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
-}
-#parallax-effect .parallax-two {
-    padding-top: 400px;
-    padding-bottom: 400px;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background-image: url(https://images.unsplash.com/photo-1432163230927-a32e4fd5a326?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=);
-    background-attachment: fixed;
-    background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-#parallax-effect .parallax-three {
-    padding-top: 400px;
-    padding-bottom: 400px;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=);
-    background-attachment: fixed;
-    background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+
+    text-align: center;
+    color: white;
+    font-family: 'Lato', sans-serif;
 }
 
 /* Media Queries */
