--- a/main.css
+++ b/main.css
@@ -53,6 +53,11 @@ h2 {
     font-size: 40px;
 }
 
+h3 {
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+}
+
 /* Thank GOD for w3schools */
 
 /* The side navigation menu */
@@ -125,17 +130,6 @@ h2 {
     left: 0;
 } /* TODO this :( */
 
-.card-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-container div {
-    width: 100%;
-    padding: 5px;
-    padding-top: 5%;
-}
-
 /* PARALLAX EFFECT */
 
 #parallax-effect {
@@ -172,4 +166,52 @@ h2 {
 }
 @media screen and (max-width: 479px) {
   #parallax-effect .block {padding: 30px 15px; width:290px;}
+}
+
+/* Gallery stuff */
+.row {
+    margin: 8px -16px;
+    display: flex;
+    justify-content: space-evenly;
+    height: 70%;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+    float: center;
+    width: 30%;
+    margin: 0 auto;
+    padding-top: 5%
+}
+
+/* Content */
+.content {
+    background-color:rgb(30, 30, 30);
+    border-radius: 20px;
+    padding: 10px;
+    height: 100%;
+}
+
+.content h3,p {
+    font-family: 'Lato', sans-serif;
+}
+
+.content img {
+    border-radius: 10px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+    .column {
+        width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
