--- a/main.css
+++ b/main.css
@@ -216,8 +216,14 @@ h3 {
     height: 100%;
 }
 
-.content h3,p {
+.content h3 {
     font-family: 'Lato', sans-serif;
+    font-size: 25px;
+}
+
+.content p {
+    font-family: 'Lato', sans-serif;
+    text-align: left;
 }
 
 .content img {
