--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 
 .fade-in-text {
     font-family: Helvetica, sans-serif;
-    font-size: 100px;
+    font-size: 7em;
     animation: fadeIn 5s;
     position: absolute;
-    top: 35%;
+    top: 40%;
+    transform: translateY(-50%);
     width: 100%;
     text-align: center;
 }
@@ -40,6 +41,7 @@
 footer {
     text-align: center;
     position: fixed;
+    width: 100%;
     bottom: 1em;
     left: 50%;
     transform: translateX(-50%);
