--- a/main.css
+++ b/main.css
@@ -65,7 +65,10 @@ footer p {
     opacity: 0.7;
 }
 
-html {
+body {
+    width: 100%;
+    height: 100%;
+    background-color: black;
     scroll-behavior: smooth;
     overflow: hidden;
 }
