--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ footer p {
 /* Above code is for "Sorry" page */
 
 #cover-image {
+    animation: cover-fadeIn 6s;
     position: fixed;
     top: 0;
     left: 50%;
@@ -63,6 +64,15 @@ footer p {
     width: 180vh;
     height: 100vh;
     opacity: 0.7;
+}
+
+@keyframes cover-fadeIn {
+    0% {
+        opacity: 0.0;
+    }
+    100% {
+        opacity: 0.7;
+    }
 }
 
 body {
@@ -88,7 +98,7 @@ h3 {
     font-size: 30px;
 }
 
-#container {
+#box-container {
     position: fixed;
     left: 0;
     right: 0;
@@ -115,9 +125,47 @@ h3 {
     width: 150%;
 }
 
+.box-title {
+    position: absolute;
+    text-shadow: 0 0 25px black;
+    font-size: 2.5vw;
+    top: 25%;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%) translateY(-50%);
+    transition: top 0.8s;
+    z-index: 1;
+    font-family: 'Lato', sans-serif;
+    color: rgb(240, 240, 240);
+}
+
+.box:hover .box-title {
+    top: 10%;
+    /* TODO animate typing */
+}
+
+.box-content {
+    position: absolute;
+    width: 75%;
+    height: 50%;
+    top: 52.5%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    text-align: justify;
+    font-size: 1.5vw;
+    text-shadow: 0px 0px 5px black;
+    text-shadow: 0px 0px 2px black;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
+
+.box:hover .box-content {
+    opacity: 1;
+}
+
 .thumbnail {
     position: absolute;
-    z-index: -0.9;
+    z-index: -0.5;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -129,4 +177,13 @@ h3 {
 
 .box:hover .thumbnail {
     opacity: 0.8;
+}
+
+.cover-icon {
+    z-index: 20;
+    width: 20vh;
+    height: 20vh;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%)
 }
