--- a/main.css
+++ b/main.css
@@ -162,16 +162,40 @@ h3 {
     height: 50%;
     top: 52.5%;
     left: 50%;
+    font-size: 2vmin;
     transform: translateX(-50%) translateY(-50%);
-    text-align: justify;
-    font-size: 1.5vw;
-    text-shadow: 0px 0px 5px black;
-    text-shadow: 0px 0px 2px black;
+    text-align: center;
+    text-shadow: 0px 0px 25px black;
+    z-index: 1;
     opacity: 0;
     transition: opacity 0.6s;
 }
 
 .box:hover .box-content {
+    display: inline-block;
+    opacity: 1;
+}
+
+.box-link {
+    position: absolute;
+    background-color: transparent;
+    border-color: transparent;
+    color: white;
+    font-size: 3vmin;
+    bottom: 5%;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 0.8s;
+    transform: translateX(-50%);
+    left: 50%;
+    text-decoration: none;
+}
+
+.box-link:hover {
+    color:rgb(59, 150, 255);
+}
+
+.box:hover .box-link {
     opacity: 1;
 }
 
