--- a/main.css
+++ b/main.css
@@ -182,6 +182,7 @@ h3 {
     border-color: transparent;
     color: white;
     font-size: 3vmin;
+    font-family: 'Lato', sans-serif;
     bottom: 5%;
     z-index: 2;
     opacity: 0;
@@ -190,6 +191,7 @@ h3 {
     left: 50%;
     text-decoration: none;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 .box-link:hover {
@@ -223,4 +225,38 @@ h3 {
     top: 10%;
     left: 50%;
     transform: translateX(-50%)
+}
+
+#nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 10vh;
+    z-index: 2;
+}
+
+#nav-bar .bg {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    background-color: black;
+    z-index: -1;
+}
+
+#nav-bar .contact-info {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    padding: 1em;
+    transform: translateY(-50%);
+    text-align: right;
+    width: auto;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 150%;
+    letter-spacing: 0.1em;
 }
