--- a/main.css
+++ b/main.css
@@ -234,6 +234,22 @@ h3 {
     width: 100%;
     height: 10vh;
     z-index: 2;
+    animation: nav-bar-reveal 4s;
+}
+
+@keyframes nav-bar-reveal {
+    0% {
+        opacity: 0.0001;
+        height: 2%;
+    }
+    50% {
+        opacity: 0.0001;
+        height: 2%;
+    }
+    100% {
+        opacity: 1;
+        height: 10vh;
+    }
 }
 
 #nav-bar .bg {
@@ -268,8 +284,9 @@ h3 {
 
 #overlay {
     position: fixed;
-    z-index: -10;
+    z-index: 10;
     top: 0; left: 0; bottom: 0; right: 0;
+    pointer-events: none;
 }
 
 #tint {
@@ -282,7 +299,7 @@ h3 {
 }
 
 #overlay:hover #tint {
-    /* TODO */
+    color: rgba(0, 0, 0, 1);
 }
 
 .popup {
@@ -294,10 +311,40 @@ h3 {
     transform: translateY(-50%);
     height: 0%;
     width: 80%;
+    border-radius: 1vw;
 
-    background-color: white;
+    background-color: rgb(20, 20, 20);
     overflow: hidden;
-    transition: all 0.75s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.popup .exit {
+    top: 1vw;
+    right: 1vw;
+    width: 4vw;
+    height: 4vw;
+
+    position:absolute;
+    -webkit-transition:-webkit-transform .25s, opacity .25s;
+      -moz-transition:-moz-transform .25s, opacity .25s;
+               transition: transform .25s, opacity .25s;
+    opacity:.25;
+
+    cursor: pointer;
+    content: "×";
+    line-height: 4vw;
+    background-color: rgb(0, 0, 0, 0);
+    /* border-radius: 2vw; */
+    border: none;
+    color: red;
+    font-size: 4vw;
+}
+
+.popup .exit:hover {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    transform: rotate(90deg);
+    opacity:0.8;
 }
 
 .popup.expanded {
