--- a/main.css
+++ b/main.css
@@ -359,10 +359,10 @@ img {
     height: 4vw;
 
     position:absolute;
-    -webkit-transition:-webkit-transform .25s, opacity .25s;
-      -moz-transition:-moz-transform .25s, opacity .25s;
-               transition: transform .25s, opacity .25s;
-    opacity:.25;
+    -webkit-transition:-webkit-transform .25s, all .25s;
+      -moz-transition:-moz-transform .25s, all .25s;
+               transition: transform .25s, all .25s;
+    opacity: 0.35;
 
     cursor: pointer;
     content: "×";
@@ -370,7 +370,7 @@ img {
     background-color: rgb(0, 0, 0, 0);
     /* border-radius: 2vw; */
     border: none;
-    color: red;
+    color: white;
     font-size: 4vw;
 }
 
@@ -379,6 +379,7 @@ img {
     -moz-transform: rotate(90deg);
     transform: rotate(90deg);
     opacity:0.8;
+    color: red;
 }
 
 .popup.expanded {
