--- a/main.css
+++ b/main.css
@@ -352,6 +352,11 @@ img {
     transition: all 0.5s ease-in-out;
 }
 
+.popup .content {
+    color: rgb(240, 240, 240);
+    padding: 5%;
+}
+
 .popup .exit {
     top: 1vw;
     right: 1vw;
