--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ h1 {
 h2 {
     font-family: 'Playfair Display', sans-serif;
     font-size: 40px;
+    margin-top: -0.5em;
 }
 
 h3 {
@@ -347,7 +348,8 @@ img {
     width: 80%;
     border-radius: 1vw;
 
-    background-color: rgb(20, 20, 20);
+    background-color: rgba(0, 0, 0, .45);
+    /* backdrop-filter: blur(0.6vw); */ /* TODO fix for low-spec devices */
     overflow: hidden;
     transition: all 0.5s ease-in-out;
 }
@@ -389,4 +391,52 @@ img {
 
 .popup.expanded {
     height: 80%;
+}
+
+.section-content-container {
+    position: absolute;
+    top: 15%;
+    left: 5%;
+    right: 5%;
+    bottom: 5%;
+    overflow: auto;
+}
+
+/* Areas within sections shown/hidden using button */
+.subsection {
+    font-size: 16pt;
+    overflow: hidden;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+
+    height: 0;
+    opacity: 0;
+    transition: all 0.25s;
+}
+.subsection.expanded {
+    height: 7em;
+    opacity: 1;
+    transition: all 0.25s;
+}
+
+/* Used to toggle visibility of subsections */
+.subsection-button {
+    width: 100%;
+    height: 2em;
+    background-color: rgba(0, 0, 0, 0.35);
+    border: 0;
+    border-radius: 0.5em;
+    font-size: 20pt;
+    color: white;
+    cursor: pointer;
+    transition: all 0.25s;
+}
+
+.subsection-button:hover {
+    background-color: rgba(0, 0, 0, 0.55);
+    transition: all 0.25s;
+}
+
+.section-content-container > * {
+    margin: 0.5% 0;
 }
