--- a/main.css
+++ b/main.css
@@ -478,3 +478,41 @@ img {
 .project-card:hover {
     background-color: rgba(0, 0, 0, 0.55);
 }
+
+.hobbies-container {
+    position: absolute;
+    display: grid;
+    gap: 2em; /* TODO find a good value for this */
+    /* grid-auto-flow: row;
+    grid-auto-rows: 40%; */
+    grid-template-columns: 47.5% 47.5%;
+    justify-content: space-evenly;
+
+    top: 15%;
+    left: 5%;
+    right: 5%;
+    bottom: 5%;
+
+    padding-left: 1%;
+    padding-right: 1%;
+
+    overflow-y: auto;
+    overscroll-behavior-inline: contain;
+
+    scroll-snap-type: inline mandatory;
+}
+
+.hobbies-container > div {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.35);
+    transition: all 0.25s;
+    border-radius: 1em;
+
+    scroll-snap-align: start;
+    /* scroll-padding-inline: 1em; */
+}
+
+.hobbies-container > div:hover {
+    background-color: rgba(0, 0, 0, 0.55);
+}
