--- a/main.css
+++ b/main.css
@@ -161,21 +161,22 @@ img {
 
 .box-content {
     position: absolute;
-    width: 75%;
+    width: 20vw;
     height: 50%;
-    top: 52.5%;
+    top: 55%;
     left: 50%;
     font-size: 2vmin;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%) scale(0.5);
     text-align: center;
     text-shadow: 0px 0px 25px black;
     z-index: 1;
     opacity: 0;
-    transition: opacity 0.6s;
+    transition: all 0.6s;
 }
 
 .box:hover .box-content {
-    display: inline-block;
+    display: block;
+    transform: translateX(-50%) translateY(-50%) scale(1);
     opacity: 1;
 }
 
