--- a/main.css
+++ b/main.css
@@ -165,7 +165,7 @@ img {
     height: 50%;
     left: 50%;
     font-size: 2vmin;
-    transform: translateX(-50%) translateY(75%) scale(0.5);
+    transform: translateX(-50%) translateY(-150%) scale(0.5);
     text-align: center;
     text-shadow: 1px 1px 8px black;
     z-index: 1;
@@ -175,7 +175,7 @@ img {
 
 .box:hover .box-content {
     display: block;
-    transform: translateX(-50%) translateY(75%) scale(1);
+    transform: translateX(-50%) translateY(-150%) scale(1);
     opacity: 1;
 }
 
@@ -206,7 +206,7 @@ img {
 }
 
 .thumbnail {
-    position: absolute;
+    position: inherit;
     z-index: -0.5;
     left: 50%;
     top: 50%;
@@ -465,25 +465,31 @@ img {
 }
 
 .projects-container > div {
+    position: relative;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.35);
-    transition: all 0.25s;
     border-radius: 1em;
+
+    overflow: hidden;
 
     scroll-snap-align: start;
     /* scroll-padding-inline: 1em; */
 }
 
-.projects-container > div > img {
-    /* TODO semi-transparent image */
+.projects-container > .thumbnail {
+    position: absolute;
+    height: 100%;
+    width: auto;
+
+    opacity: 1;
+    z-index: -0.5;
 }
+
+/* .projects-container:hover > .thumbnail {
+    opacity: 0.5;
+} */
 
 .projects-container > div > p {
-    /* TODO description */
-}
-
-.projects-container > div:hover {
-    background-color: rgba(0, 0, 0, 0.55);
+    opacity: 1;
 }
 
 .hobbies-container {
