--- a/main.css
+++ b/main.css
@@ -211,8 +211,9 @@ img {
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
+    object-fit: cover;
     height: 100%;
-    width: auto;
+    width: 100%;
     opacity: 0.5;
     transition: .4s ease;
 }
@@ -469,24 +470,27 @@ img {
     height: 100%;
     border-radius: 1em;
 
+    background-color: blue; /* TODO find a good color(s) for this */
+
     overflow: hidden;
 
     scroll-snap-align: start;
     /* scroll-padding-inline: 1em; */
 }
 
-.projects-container > .thumbnail {
+.projects-container > div > .thumbnail {
     position: absolute;
     height: 100%;
-    width: auto;
+    width: 100%;
+    object-fit: cover;
 
     opacity: 1;
     z-index: -0.5;
 }
 
-/* .projects-container:hover > .thumbnail {
-    opacity: 0.5;
-} */
+.projects-container:hover > div > .thumbnail {
+    opacity: 0.35;
+}
 
 .projects-container > div > p {
     opacity: 1;
@@ -517,13 +521,19 @@ img {
 
 .hobbies-container > div {
     width: 100%;
-    height: 100%;
+    height: 85%;
     background-color: rgba(0, 0, 0, 0.35);
     transition: all 0.25s;
+    padding: 0.5em;
     border-radius: 1em;
 
     scroll-snap-align: start;
     /* scroll-padding-inline: 1em; */
+}
+
+.hobbies-container > div > h3 {
+    top: 0;
+    margin: 0;
 }
 
 .hobbies-container > div:hover {
