--- a/main.css
+++ b/main.css
@@ -469,8 +469,9 @@ img {
     position: relative;
     height: 100%;
     border-radius: 1em;
+    padding: 1.25em;
 
-    background-color: blue; /* TODO find a good color(s) for this */
+    background-color: black;
 
     overflow: hidden;
 
@@ -488,11 +489,28 @@ img {
     z-index: -0.5;
 }
 
-.projects-container:hover > div > .thumbnail {
+.projects-container > div:hover > .thumbnail {
+    transition: .4s ease;
     opacity: 0.35;
 }
 
+.projects-container > div > h3 {
+    position: relative;
+    margin: 0;
+    font-size: 1.5em;
+    opacity: 1;
+    z-index: 2;
+    transition: .4s ease;
+}
+
+/* .projects-container > div:hover > h3 {
+    transition: .4s ease;
+    opacity: 0;
+} */
+
 .projects-container > div > p {
+    position: initial;
+    top: 0;
     opacity: 1;
 }
 
