--- a/main.css
+++ b/main.css
@@ -460,6 +460,7 @@ img {
     padding-bottom: 2%;
 
     overflow-x: auto;
+    overflow-y: hidden;
     overscroll-behavior-inline: contain;
 
     scroll-snap-type: inline mandatory;
@@ -469,7 +470,7 @@ img {
     position: relative;
     height: 100%;
     border-radius: 1em;
-    padding: 1.25em;
+    padding: 0.75em;
 
     background-color: black;
 
@@ -494,24 +495,48 @@ img {
     opacity: 0.35;
 }
 
+.projects-container > div > span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    user-select: none;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    opacity: 1;
+    z-index: 2;
+    transition: .4s ease;
+}
+
+.projects-container > div:hover > span {
+    opacity: 0;
+}
+
 .projects-container > div > h3 {
     position: relative;
     margin: 0;
     font-size: 1.5em;
     opacity: 1;
     z-index: 2;
-    transition: .4s ease;
+    text-shadow: 2px 2px 1px black;
 }
-
-/* .projects-container > div:hover > h3 {
-    transition: .4s ease;
-    opacity: 0;
-} */
 
 .projects-container > div > p {
     position: initial;
+    margin: 0;
     top: 0;
     opacity: 1;
+}
+
+.projects-container > div > p > a {
+    color:aqua; /* Used to contrast links from backdrop */
+}
+
+.project-status {
+    z-index: 2;
+    position: relative;
+    margin-top: 5%;
 }
 
 .hobbies-container {
@@ -523,13 +548,14 @@ img {
     grid-template-columns: 47.5% 47.5%;
     justify-content: space-evenly;
 
-    top: 15%;
+    padding: 10%;
+    /* top: 15%;
     left: 5%;
     right: 5%;
     bottom: 5%;
 
     padding-left: 1%;
-    padding-right: 1%;
+    padding-right: 1%; */
 
     overflow-y: auto;
     overscroll-behavior-inline: contain;
@@ -538,22 +564,38 @@ img {
 }
 
 .hobbies-container > div {
+    position: relative;
     width: 100%;
     height: 85%;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: black;
     transition: all 0.25s;
-    padding: 0.5em;
     border-radius: 1em;
 
     scroll-snap-align: start;
     /* scroll-padding-inline: 1em; */
+
+    z-index: 0;
+}
+
+.hobbies-container > div > .thumbnail {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    object-fit: cover;
+
+    opacity: 1;
+    z-index: 1;
+}
+
+.hobbies-container > div:hover > .thumbnail {
+    transition: .4s ease;
+    opacity: 0.35;
 }
 
 .hobbies-container > div > h3 {
-    top: 0;
+    top: 10;
     margin: 0;
-}
-
-.hobbies-container > div:hover {
-    background-color: rgba(0, 0, 0, 0.55);
+    z-index: inherit;
 }
