--- a/simplified.css
+++ b/simplified.css
@@ -2,6 +2,14 @@ body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+
+    background-color: white;
+    color: black;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
 }
 
 h1 {
