--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,33 +1,36 @@
-
-#body {
-    background-color: black;
+body {
+    background-color: white;
+    color: black;
     overflow-x: hidden;
+    transition: all 0.25s;
+}
+
+/* Used to toggle dark mode */
+.dark-mode {
+    background-color: black;
+    color: white;
 }
 
 h1 {
     font-family: 'Playfair Display', sans-serif;
     font-size: 40px;
-    color: white;
     margin: 0;
 }
 
 h2 {
     font-family: 'Playfair Display', sans-serif;
     font-size: 30px;
-    color: white;
     margin: 0;
 }
 
 h3 {
     font-family: 'Lato', sans-serif;
     font-size: 20px;
-    color: white;
     margin: 0;
 }
 
 p {
     font-family: 'Lato', sans-serif;
-    color: rgb(240, 240, 240);
 }
 
 .centered {
@@ -40,7 +43,6 @@ p {
     left: 0;
     height: fit-content;
     margin: 5em;
-    /* background-color: red; */ /* debugging only */
 
     display: flex;
     flex-direction: column;
@@ -133,14 +135,20 @@ p {
     left: 100%;
 }
 
+#markdown-renderer {
+    position: absolute;
+    width: 80%;
+}
+
 #close-project {
     position: absolute;
     top: 35px;
     left: 55px;
-    color: rgba(255, 255, 255, 0.5);
+    opacity: 0.5;
+    font-family: 'Lato', sans-serif;
 
     font-size: 25px;
-    
+
     padding: 0;
     border: none;
     background: none;
@@ -149,12 +157,71 @@ p {
 }
 
 #close-project:hover {
-    color: rgba(255, 255, 255, 0.9);
+    opacity: 0.9;
     font-size: 30px;
 }
 
-#markdown-renderer {
+/* CSS for dark mode toggle switch */
+.toggle-switch {
+    position: fixed;
+    top: 2em;
+    right: 2em;
+    width: 100px;
+    height: 50px;
+    --light: #fff;
+    --dark: #000;
+    --link: rgb(27, 129, 112);
+    --link-hover: rgb(24, 94, 82);
+}
+
+.switch-label {
     position: absolute;
-    width: 80%;
-    color: white;
+    width: 100%;
+    height: 45px;
+    background-color: var(--dark);
+    border-radius: 30px;
+    cursor: pointer;
+    border: 3px solid var(--dark);
+}
+
+.checkbox {
+    position: absolute;
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.checkbox:checked~.slider {
+    background-color: var(--light);
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    -webkit-box-shadow: inset 12px -4px 0px 0px var(--light);
+    box-shadow: inset 12px -4px 0px 0px var(--light);
+    background-color: var(--dark);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.checkbox:checked~.slider::before {
+    -webkit-transform: translateX(50px);
+    -ms-transform: translateX(50px);
+    transform: translateX(50px);
+    background-color: var(--dark);
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
