--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,7 +49,7 @@ p {
     height: fit-content;
     margin: 5em;
 
-    display: flex;
+    display: grid;
     flex-direction: column;
     gap: 5em;
 
