--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -57,8 +57,8 @@ p {
 }
 
 #portfolio-container.hidden {
-    /* left: -100%; */
-    scale: 0%;
+    left: -100%;
+    opacity: 0;
 }
 
 .project-link {
@@ -137,14 +137,16 @@ p {
     top: 0;
     left: 0;
     right: 0;
-    width: auto;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 
     transition: all 0.5s;
 }
 
 #project-viewer.hidden {
-    /* left: 100%; */
-    scale: 0%;
+    left: 100%;
+    opacity: 0;
 }
 
 #markdown-renderer {
