--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,8 +3,18 @@ body, html {
     background-color: white;
     color: black;
     width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
     transition: all 0.25s;
+}
+
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 /* Used to toggle dark mode */
@@ -139,7 +149,6 @@ p {
     right: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 
     transition: all 0.5s;
 }
