Adding tags and displaying them below project titles

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -163,6 +163,10 @@ p {
     width: 80%;
 }
 
+#markdown-renderer > div > img {
+    height: 20px;
+}
+
 #close-project {
     position: absolute;
     top: 35px;
