--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,6 +4,7 @@ body, html {
     color: black;
     width: 100vw;
     height: 100vh;
+    margin: 0;
     overflow-x: hidden;
     transition: all 0.25s;
 }
