change display: block; to display: inline;

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -165,7 +165,7 @@ p {
 }
 
 #markdown-renderer > div > img {
-    display: block;
+    display: inline;
     max-height: 20px;
     width: auto;
     height: auto;
