--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,7 +6,11 @@ body, html {
     height: 100vh;
     margin: 0;
     overflow-x: hidden;
-    transition: all 0.25s;
+    transition: all 1s;
+}
+
+body.hidden {
+    opacity: 0.001;
 }
 
 html {
