--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,7 +24,7 @@ html::-webkit-scrollbar {
 
 /* Used to toggle dark mode */
 .dark-mode {
-    background-color: black;
+    background-color: #252525;
     color: white;
 }
 
@@ -210,7 +210,7 @@ p {
     width: 100px;
     height: 50px;
     --light: #fff;
-    --dark: #000;
+    --dark: #252525;
     --link: rgb(27, 129, 112);
     --link-hover: rgb(24, 94, 82);
 }
