Restructure project loading to depend on json config file

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -129,6 +129,10 @@ p {
     -webkit-transform: translateX(-50%);
 }
 
+.project-status-tags > img {
+    padding: 0.2em;
+}
+
 .project-link .thumbnail {
     position: absolute;
     left: 50%;
