--- a/styles/booplatro.css
+++ b/styles/booplatro.css
@@ -8,7 +8,7 @@
 /* Styling the body to center the card on the screen */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #35654d;
     display: flex;
     justify-content: center;
     align-items: center;
