--- a/styles/booplatro.css
+++ b/styles/booplatro.css
@@ -1,12 +1,12 @@
 /* Resetting the default margin and padding for all elements */
-* {
+/* #card-grid * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 /* Styling the body to center the card on the screen */
-body {
+#card-grid {
     font-family: 'Arial', sans-serif;
     background-color: #35654d;
     display: flex;
@@ -16,6 +16,12 @@ body {
     overflow: hidden; /* Prevents scrollbars if the card moves out of view */
 }
 
+#card-grid > * {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 /* The container for the card, adding perspective for the 3D effect */
 .card-container {
     perspective: 750px; /* Creates the 3D depth. A higher number results in a shallower effect */
@@ -23,6 +29,14 @@ body {
     justify-content: center;
     align-items: center;
     padding: 3px;
+}
+
+.card-container .outer-desc {
+    opacity: 1;
+}
+
+.card-container .outer-desc.hidden {
+    opacity: 0;
 }
 
 /* The card styling: size, background, shadow, and 3D transformation */
