Add spacing between card and pop-up

--- a/styles/booplatro.css
+++ b/styles/booplatro.css
@@ -30,6 +30,7 @@
 }
 
 .card-container .outer-desc {
+    margin-top: 15px; /* TODO tweak this value for spacing */
     margin-left: auto;
     margin-right: auto;
     display: block;
